--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=f032f4543b317e8017ad",
+    "/css/app.css": "/css/app.css?id=cf8d6f9307797443641d",
+    "/js/avatar.js": "/js/avatar.js?id=af92cf34d0adc57c2c6c"
 }
