Add: Infinite Scrollの導入

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
-    "/js/app.js": "/js/app.js?id=f032f4543b317e8017ad",
+    "/js/app.js": "/js/app.js?id=8910d034182ce575b531",
     "/css/app.css": "/css/app.css?id=347e3891fcd44d515f73",
-    "/js/avatar.js": "/js/avatar.js?id=af92cf34d0adc57c2c6c"
+    "/js/infinite_scroll.js": "/js/infinite_scroll.js?id=d68c82da4be7c5b0287c",
+    "/js/preview_upload.js": "/js/preview_upload.js?id=a8c4f1041b333cdf670b"
 }
