--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "cross-env": "^7.0",
         "font-awesome-scss": "^1.0.0",
         "jquery": "^3.2",
+        "jquery-bridget": "^2.0.1",
         "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
