--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=8910d034182ce575b531",
-    "/css/app.css": "/css/app.css?id=151eb3f5380a80be3d39",
-    "/js/infinite_scroll.js": "/js/infinite_scroll.js?id=7f80c36c99d709dd814c",
-    "/js/preview_upload.js": "/js/preview_upload.js?id=ec8dfb189bfe24237478"
+    "/js/app.js": "/js/app.js?id=567749005f26960dad76",
+    "/css/app.css": "/css/app.css?id=0e21a59a7ca52e87dece"
 }
