--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
-        "infinite-scroll": "^3.0.6"
+        "infinite-scroll": "^3.0.6",
+        "select2": "^4.0.13"
     }
 }
