--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     },
     "dependencies": {
         "dropzone": "^5.7.1",
+        "imagesloaded": "^4.1.4",
         "infinite-scroll": "^3.0.6",
         "masonry-layout": "^4.2.2",
         "select2": "^4.0.13"
