--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "laravel/ui": "^1.0",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "nunomaduro/larastan": "^0.6.4",
         "php-webdriver/webdriver": "^1.8",
         "phpunit/phpunit": "^8.0"
     },
