--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,13 +12,18 @@ jobs:
     steps:
       - checkout
 
-      - run: sudo apt update 
-      - run: sudo docker-php-ext-install zip pdo_mysql gd
+      - run:
+          name: setup
+          command: |
+              sudo apt update && sudo apt install -y mariadb-client libpng-dev libjpeg-dev zlib1g-dev
+              sudo docker-php-ext-configure gd --with-png-dir=/usr/include --with-jpeg-dir=/usr/include
+              sudo docker-php-ext-install zip pdo_mysql gd
+              sudo composer self-update
 
       #composerキャッシュ検索
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "composer.json" }}
+            - v1-dependencies-{{ checksum "composer.lock" }}
             - v1-dependencies-
 
       #composerライブラリインストール
@@ -26,14 +31,14 @@ jobs:
 
       #composerキャッシュ生成
       - save_cache:
-          key: v1-dependencies-{{ checksum "composer.json" }}
+          key: v1-dependencies-{{ checksum "composer.lock" }}
           paths:
             - ./vendor
 
       #npmキャッシュ検索
       - restore_cache:
           keys:
-            - node-v1-{{ checksum "package.json" }}
+            - node-v1-{{ checksum "package-lock.json" }}
             - node-v1-
 
       #npmライブラリインストール
@@ -41,7 +46,7 @@ jobs:
 
       #npmキャッシュ生成
       - save_cache:
-          key: node-v1-{{ checksum "package.json" }}
+          key: node-v1-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
 
