Add: circleci設定ファイルにLarastan実行コード追加

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,5 +53,8 @@ jobs:
           paths:
             - ./node_modules
 
+      #Larastan実行
+      - run: ./vendor/bin/phpstan analyse -c phpstan.neon
+
       #PHPUnit実行
       - run: ./vendor/bin/phpunit ./tests/Feature
