--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,12 +21,11 @@ jobs:
               sudo apt update && sudo apt install -y mariadb-client libpng-dev libjpeg-dev zlib1g-dev
               sudo docker-php-ext-configure gd --with-png-dir=/usr/include --with-jpeg-dir=/usr/include
               sudo docker-php-ext-install zip pdo_mysql gd
-              sudo composer self-update
 
       #composerキャッシュ検索
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "composer.lock" }}
+            - v1-dependencies-{{ checksum "composer.json" }}
             - v1-dependencies-
 
       #composerライブラリインストール
@@ -34,14 +33,14 @@ jobs:
 
       #composerキャッシュ生成
       - save_cache:
-          key: v1-dependencies-{{ checksum "composer.lock" }}
+          key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
             - ./vendor
 
       #npmキャッシュ検索
       - restore_cache:
           keys:
-            - node-v1-{{ checksum "package-lock.json" }}
+            - node-v1-{{ checksum "package.json" }}
             - node-v1-
 
       #npmライブラリインストール
@@ -49,7 +48,7 @@ jobs:
 
       #npmキャッシュ生成
       - save_cache:
-          key: node-v1-{{ checksum "package-lock.json" }}
+          key: node-v1-{{ checksum "package.json" }}
           paths:
             - ./node_modules
 
@@ -57,4 +56,4 @@ jobs:
       - run: ./vendor/bin/phpunit ./tests/Feature
 
       #Larastan実行
-      - run: ./vendor/bin/phpstan analyse --level 6
+      - run: ./vendor/bin/phpstan analyse -c phpstan.neon
