Change: アプリタイトル変更

--- a/.env.dusk.local
+++ b/.env.dusk.local
@@ -1,4 +1,4 @@
-APP_NAME=laravel
+APP_NAME=nikomal
 APP_ENV=testing
 APP_KEY=base64:vKAi6NbIjQyG/ttIsqT7T/N83GUTtREYCorqU9co448=
 APP_URL=http://127.0.0.1:8080
